fixed nav hover on mobile bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -58,12 +58,6 @@ nav .navbar-brand {
     padding-top: 0rem !important;
 }
 
-/* .nav-link:hover {
-    color: rgba(255, 255, 255) !important;
-    text-decoration: underline;
-    transform: scale(1.1);
-} */
-
 /* -----HEADER----- */
 header, footer {
     text-align: center;
